--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,17 +9,25 @@ body{
     background-color: #ffffff;
 }
 
+/* navbar */
+
 header{
     .navbar{
         background-color: #ffe4fd;
-        .container-fluid{
-            h1{
-                display: flex;
-                justify-content: center;
-                img{
-                    width: 40%;
-                }
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2 1fr);
+        .logo{
+            position: relative;
+            max-width: 120px;
+            max-height: 105px;
+            margin: 1rem;
+            justify-self: center;
+            img{
+                width: 100%;
             }
+        }
+        .container-fluid{
             .navbar-collapse{
                 .navbar-nav{
                     .nav-item{
@@ -40,6 +48,8 @@ header{
     }
 }
 
+/* home */ 
+
 .menu-home{
     margin: 1rem;
     padding: 1rem;
@@ -55,12 +65,16 @@ header{
         h2{
             font-family: 'Dancing Script', cursive;
         }
+        p{
+            font-family: 'Arima', cursive;
+        }
         .contenedor-foto{
             position: relative;
-            height: 300px;
-            width: 250px;
+            max-height: 300px;
+            max-width: 250px;
             overflow: hidden;
             border-radius: 6px;
+            box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
             .foto{
                 width: 100%;
             }
@@ -68,18 +82,35 @@ header{
     }   
     .contacto{
         display: flex;
+        justify-content: space-evenly;
         padding: 0.5rem;
+        margin-top: 0.5rem;
         width: 100%;
-        a{
-            display: flex;
-            justify-content: center;
-            img{
-                width: 40%;
+        .wsp{
+            position: relative;
+            width: 45px;
+            height: 45px;
+            a{
+                img{
+                    width: 100%;
+                }
+            }
+        }
+        .insta{
+            position: relative;
+            width: 45px;
+            height: 45px;
+            a{
+                img{
+                    width: 100%;
+                }
             }
         }
     }
 }
 
+
+/* footer */
 footer{
     background-color: #ffe4fd;
     text-align: center;
@@ -87,3 +118,6 @@ footer{
         font-size: 0.8rem;
     }
 }
+
+// --------------------------------------------
+
