--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,36 +50,71 @@ header{
 
 /* home */ 
 
-.menu-home{
+main{
     margin: 1rem;
     padding: 1rem;
     background-color: #F9F3EE;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    .sobre-mi{   
+    .titulo{
+        text-align: center;
+        h1{
+            font-family: 'Lobster', cursive;
+        }
+    }
+    .menu-home{
         display: flex;
         flex-direction: column;
-        align-items: center; 
-        text-align: center;
-        h2{
-            font-family: 'Dancing Script', cursive;
-        }
-        p{
-            font-family: 'Arima', cursive;
-        }
-        .contenedor-foto{
-            position: relative;
-            max-height: 300px;
-            max-width: 250px;
-            overflow: hidden;
-            border-radius: 6px;
-            box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
-            .foto{
-                width: 100%;
+        justify-content: center;
+        .sobre-mi{   
+            display: flex;
+            flex-direction: column;
+            align-items: center; 
+            text-align: center;
+            h2{
+                font-family: 'Lobster', cursive;
+            }
+            span{
+                font-family: 'Arima', cursive;
+            }
+            p{
+                font-family: 'Arima', cursive;
+            }
+            .contenedor-foto{
+                position: relative;
+                max-height: 300px;
+                max-width: 250px;
+                overflow: hidden;
+                border-radius: 6px;
+                box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+                .foto{
+                    width: 100%;
+                }
+            }
+        }   
+    }
+    .mi-trabajo{
+        display: grid;
+        justify-content: center;
+        gap: 1rem;
+        padding: 1rem;
+        .subtitulo{
+            text-align: center;
+            h3{
+                font-family: 'Lobster', cursive;
             }
         }
-    }   
+        .container-unas{
+            position: relative;
+            max-width: 280px;
+            max-height: 300px;
+            overflow: hidden;
+            border-radius: 5px;
+            box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
     .contacto{
         display: flex;
         justify-content: space-evenly;
@@ -107,8 +142,19 @@ header{
             }
         }
     }
+    .ubicacion{
+        display: flex;
+        justify-content: center;
+        .mapa{
+            width: 300px;
+            height: 300px;
+            iframe{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
-
 
 /* footer */
 footer{
